--- a/KetoSavageWeb/KetoSavageWeb/Views/Manage/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Manage/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-sm-12">
         <p>@ViewBag.StatusMessage</p>
-        <p>@ViewBag.ErrorMessage</p>
+        <p style="color:red;">@ViewBag.ErrorMessage</p>
     </div>
 </div>
 @*<div class="row">
