--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -25,7 +25,7 @@
 }
 
 <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11">
+    <div class="col-sm-12 col-lg-9">
         @Html.Action("newsCarousel", "ManageNews")
     </div>
     <div class="col-sm-12 col-md-4 col-lg-2 col-xl-1">
@@ -33,8 +33,16 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11">
+    <div class="col-sm-12 col-lg-9">
         @Html.Action("ClientWeightGraph", "ClientCharts", new { userId = Session["UserId"] })
+    </div>
+</div>
+<div class="row">
+    <div class="col-sm-12 col-lg-9">
+        @Html.Action("ClientMacroScoreChart", "ClientCharts", new { userId = Session["UserId"] })
+    </div>
+    <div class="col-sm-12 col-lg-9">
+        @Html.Action("ClientLifetimeMacroScoreChart", "ClientCharts", new { userId = Session["UserId"] })
     </div>
 </div>
 <div class="row">
@@ -62,7 +70,7 @@
     </div>
 </div>*@
 <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-10 col-xl-11">
+    <div class="col-sm-12 col-lg-9">
         @if (Request.Browser.IsMobileDevice)
         {
             if (Request.Browser.ScreenPixelsWidth > 780)
