A lot of cleanup, Client side is working without DevExpress tools.  Working on the Coach side now.

--- a/KetoSavageWeb/KetoSavageWeb/Views/CoachDashboard/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/CoachDashboard/Index.cshtml
@@ -2,11 +2,8 @@
     ViewBag.Title = "Dashboard";
 }
 <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-9 col-xl-9">
+    <div class="col-sm-12">
         @Html.Action("newsCarousel", "ManageNews")
-    </div>
-    <div class="col-sm-12 col-md-4 col-lg-3 col-xl-3">
-
     </div>
 </div>
 
