--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/DateTime.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/DateTime.cshtml
@@ -1,2 +1,2 @@
-﻿@model DateTime?
-@Html.DevExpress().DateEditFor(m => m).GetHtml()
+﻿@*@model DateTime?
+@Html.DevExpress().DateEditFor(m => m).GetHtml()*@
