--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Decimal.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Decimal.cshtml
@@ -1,2 +1,2 @@
-﻿@model Decimal?
-@Html.DevExpress().SpinEditFor(m => m).GetHtml()
+﻿@*@model Decimal?
+@Html.DevExpress().SpinEditFor(m => m).GetHtml()*@
