--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Password.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Password.cshtml
@@ -1,4 +1,4 @@
-﻿@model object
+﻿@*@model object
 @Html.DevExpress().TextBoxFor(m => m, s => {
     s.Properties.Password = true;
-}).GetHtml()
+}).GetHtml()*@
