--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Boolean.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/Boolean.cshtml
@@ -1,2 +1,2 @@
-﻿@model Boolean?
-@Html.DevExpress().CheckBoxFor(m => m).GetHtml()
+﻿@*@model Boolean?
+@Html.DevExpress().CheckBoxFor(m => m).GetHtml()*@
