--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/EmailAddress.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/EmailAddress.cshtml
@@ -1,4 +1,4 @@
-﻿@model object
+﻿@*@model object
 
-@Html.DevExpress().TextBoxFor(m => m).GetHtml()
+@Html.DevExpress().TextBoxFor(m => m).GetHtml()*@
 
