--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/String.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/EditorTemplates/String.cshtml
@@ -1,4 +1,4 @@
-﻿@model object
+﻿@*@model object
 @{
     Type tModel = ViewData.ModelMetadata.ContainerType.GetProperty(ViewData.ModelMetadata.PropertyName).PropertyType;
 }
@@ -11,4 +11,4 @@ else if(typeof(Enum).IsAssignableFrom(tModel)) {
         s.SelectedIndex = 0;
         s.Properties.DropDownStyle = DropDownStyle.DropDownList;
     }).GetHtml();
-} 
+}*@ 
