--- a/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/Shared/_rootLayout.cshtml
@@ -13,7 +13,7 @@
 
     @Scripts.Render("~/Scripts/bundle")
     @Scripts.Render("~/Scripts/DevExtremeBundle")
-
+    <link rel="icon" href="@Url.Content("~/Content/icons/favicon.ico")" />
     <script src="@Url.Content("~/Scripts/JSCustom.js")" type="text/javascript"></script>
 
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
