--- a/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserProgress/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using DevExpress.Web.ASPxTreeList
 @{
-    ViewBag.Title = "User Progress";
+    ViewBag.Title = "Client Dashboard";
 }
 @if(Request.Browser.IsMobileDevice)
 {
