--- a/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
+++ b/KetoSavageWeb/KetoSavageWeb/Views/UserPrograms/UserProgramDetails.cshtml
@@ -120,7 +120,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12" style="background-color: #0a0a0a">
+    <div class="col-sm-12">
         @Html.Action("ClientCurrentWeekMacroGauge", "ClientCharts", new { userId = Session["UserId"] })
     </div>
 </div>
